styleguide covers all main styling points. added app adapter, rant model fixture data, and have rants populating

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,9 +4,7 @@
 @import 'colors.scss';
 @import 'new-rant.scss';
 
-html { box-sizing: border-box; }
-
-*, *:before, *:after { box-sizing: inherit; }
+*, *:before, *:after { box-sizing: border-box;; }
 
 .search > ::-webkit-input-placeholder { color: #fff }
 
@@ -37,16 +35,7 @@ html { box-sizing: border-box; }
   padding-left: 15px;
 }
 
-.button {
-  border: 1px solid;
-  border-radius: 3px;
-  padding: 6px 12px;
-  font-size: 14px;
-  cursor: pointer;
-  color: #fff;
-}
-
-.aside-avatar {
+.avatar {
   width: 100%;
   height: 100px;
   border: 4px dashed;
@@ -56,8 +45,38 @@ html { box-sizing: border-box; }
 }
 
 .log-out > button {
-  background: $teal;
   width: 100%;
+}
+
+button {
+  border: 1px solid;
+  border-radius: 3px;
+  padding: 6px 12px;
+  font-size: 14px;
+  cursor: pointer;
+  color: #fff;
+}
+
+.btn-green {
+  background: $teal;
+}
+
+.btn-gray {
+  background: $cancel;
+}
+
+.new-rant-btn {
+  float: right;
+  background: #fff;
+  color: $teal;
+  border-color: #fff;
+  transition: .25s;
+}
+
+.new-rant-btn:hover {
+  background: $teal;
+  color: #fff;
+  border-color: $teal;
 }
 
 .main {
@@ -66,21 +85,9 @@ html { box-sizing: border-box; }
   float: left;
 }
 
-.new-rant-btn {
-  float: right;
-  background: #fff;
-  color: $teal;
-  border-color: #fff;
-  font-size: 14px;
-  padding: 6px 12px;
-  cursor: pointer;
-  border: 1px solid;
+.ui-box {
+  margin-bottom: 15px;
+  padding: 15px;
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,.2);
   border-radius: 3px;
-  transition: .25s;
-}
-
-.new-rant-btn:hover {
-  background: $teal;
-  color: #fff;
-  border-color: $teal;
 }
