--- a/app/styles/new-rant.scss
+++ b/app/styles/new-rant.scss
@@ -2,12 +2,8 @@
 
 .new-rant {
   width: 100%;
-  margin-bottom: 15px;
-  padding: 15px;
-  box-shadow: 0 1px 4px 0 rgba(0,0,0,.2);
-  border-radius: 3px;
   clear: both;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .rant-header {
@@ -34,35 +30,17 @@
   font-size: 29px;
 }
 
-.new-rant-aside {
-  float: left;
-  width: 21%;
-  height: 600px;
-}
-
 .rant-buttons {
   float: right;
 }
 
 .rant-buttons > .save {
-  background: $teal;
   float: left;
 }
 
 .cancel {
-  background: $cancel;
   float: left;
   margin-left: 15px;
-}
-
-
-.rant-avatar {
-  width: 100%;
-  height: 100px;
-  border: 4px dashed;
-  border-radius: 25px 25px 0;
-  background-color: $blue;
-  margin-bottom: 15px;
 }
 
 .rant-body {
